<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
   
    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="fill_parent"
        android:layout_height="20dp"
        android:orientation="horizontal"
        android:background="@color/cinzaclaro">

        <TextView
            android:id="@+id/txtFinalSelecao1"
            android:layout_width="@dimen/textview_txtoitavas"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            style="@style/textclassificacao" />

        <TextView
            android:id="@+id/txtVersos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/textview_jogos"
            android:text="@string/jogos"
            style="@style/textclassificacao"  />

        <TextView
            android:id="@+id/txtSemiSel3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/textview_vitorias"
            android:text="@string/vitorias"
            style="@style/textclassificacao"  />

        <TextView
            android:id="@+id/txtSemiSel4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/textview_empates"
            android:text="@string/emprates"
            style="@style/textclassificacao"  />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/textview_derrotas"
            android:text="@string/derrotas"
            style="@style/textclassificacao"  />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/textview_gp"
            android:text="@string/golspro"
            style="@style/textclassificacao"  />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/textview_gc"
            android:text="@string/golscontra"
            style="@style/textclassificacao"  />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/textview_sg"
            android:text="@string/saldogols"
            style="@style/textclassificacao"  />

    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txtSelNome"
            android:layout_width="@dimen/textview_selclassif"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:text="BRASIL" 
            style="@style/textclassificacao" />

        <TextView
            android:id="@+id/txtJogos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/textview_jogos_1"
            android:background="@color/silver"
            android:text="0"
            android:textAppearance="?android:attr/textAppearanceSmall"
            style="@style/textclassificacao"  />

        <TextView
            android:id="@+id/txtVitorias"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/textview_vitorias_1"
            android:text="0"
            android:textAppearance="?android:attr/textAppearanceSmall"
            style="@style/textclassificacao"  />

        <TextView
            android:id="@+id/txtEmpates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/textview_empates_1"
            android:background="@color/silver"
            android:text="0"
            android:textAppearance="?android:attr/textAppearanceSmall"
            style="@style/textclassificacao"  />

        <TextView
            android:id="@+id/txtDerrotas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/textview_derrotas_1"
            android:text="0"
            android:textAppearance="?android:attr/textAppearanceSmall"
            style="@style/textclassificacao"  />

        <TextView
            android:id="@+id/txtGolsPro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/textview_gp_1"
            android:background="@color/silver"
            android:text="0"
            android:textAppearance="?android:attr/textAppearanceSmall"
            style="@style/textclassificacao"  />

        <TextView
            android:id="@+id/txtGolsContra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/textview_gc_1"
            android:text="0"
            android:textAppearance="?android:attr/textAppearanceSmall"
            style="@style/textclassificacao"  />

        <TextView
            android:id="@+id/txtSaldoGols"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/textview_sg_1"
            android:background="@color/silver"
            android:text="0"
            android:textAppearance="?android:attr/textAppearanceSmall"
            style="@style/textclassificacao"  />
    </LinearLayout>

</LinearLayout>
