<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/capa1"
    android:orientation="vertical"
    tools:context=".MainActivity" >
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.83" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.83"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="200dp"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <ImageView
                        android:id="@+id/imgSelOitavas1"
                        style="@style/menuinicialimg"
                        android:layout_width="55dp"
                        android:layout_height="41dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/brazucaicon" />

                    <Button
                        android:id="@+id/btnSelecoes"
                        style="@style/buttonStyle"
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/selector"
                        android:text="@string/selecjogadores" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <Button
                        android:id="@+id/btnGrupos"
                        style="@style/buttonStyle"
                        android:layout_width="166dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/selector"
                        android:text="@string/grupos" />

                    <ImageView
                        android:id="@+id/imgSelOitavas2"
                        style="@style/menuinicialimg"
                        android:layout_width="55dp"
                        android:layout_height="41dp"
                        android:layout_marginTop="15dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/brazucaicon" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <ImageView
                        android:id="@+id/imgSelOitavas1"
                        style="@style/menuinicialimg"
                        android:layout_width="55dp"
                        android:layout_height="41dp"
                        android:layout_marginTop="15dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/brazucaicon" />

                    <Button
                        android:id="@+id/btnClassificacao"
                        style="@style/buttonStyle"
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/selector"
                        android:text="@string/classificacao" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparente"
        android:gravity="bottom"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txtVersao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Versão: " />

        <TextView
            android:id="@+id/txtData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120dp"
            android:lines="1"
            android:text="Data: " />
    </LinearLayout>

</LinearLayout>